--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Escape the Algorithm | YouTube Feed Remover",
+  "name": "Escape the Algorithm - YouTube Feed Blocker",
   "version": "1.0.2",
-  "description": "Hide your feed and other algorithmically generated content on YouTube, Facebook and more to regain control of your time online",
+  "description": "Hide your algorithmically generated feeds on YouTube, Twitter, Facebook, and more to unhook your brain from social media addiction",
   "permissions": ["storage"],
   "host_permissions": [
     "*://*.youtube.com/*",
