--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Escape the Algorithm - YouTube Feed Blocker",
-  "version": "1.0.2",
+  "version": "1.0.21",
   "description": "Hide your algorithmically generated feeds on YouTube, Twitter, Facebook, and more to unhook your brain from social media addiction",
-  "permissions": ["storage"],
+  "permissions": ["storage", "notifications"],
   "host_permissions": [
     "*://*.youtube.com/*",
     "*://*.facebook.com/*",
@@ -33,5 +33,8 @@
       "css": ["styles.css"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  }
 }
