--- a/platform_specific/chrome/manifest.json
+++ b/platform_specific/chrome/manifest.json
@@ -1,5 +1,22 @@
 {
   "manifest_version": 3,
+  "permissions": ["storage", "notifications"],
+  "host_permissions": [
+    "*://*.youtube.com/*",
+    "*://*.facebook.com/*",
+    "*://*.instagram.com/*",
+    "*://*.twitter.com/*",
+    "*://*.x.com/*",
+    "*://*.tiktok.com/*"
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/icons/icon16.png",
+      "48": "/icons/icon48.png",
+      "128": "/icons/icon128.png"
+    }
+  },
   "background": {
     "service_worker": "background.js"
   }
